# passkeyd-qt

./: .gitignore  Cargo.toml  Makefile  README.md
passkeyd-enroll/: Cargo.toml  build.rs  main.py  pyproject.toml  test.py
passkeyd-enroll/qml/: Main.qml
passkeyd-enroll/src/: main.rs
passkeyd-enroll/src/qml/: Main.qml
passkeyd-presence/: main.py  pyproject.toml
passkeyd-select/: Cargo.toml  build.rs  main.py  pyproject.toml  test.py
passkeyd-select/qml/: Main.qml
passkeyd-select/src/: main.rs
passkeyd-select/src/qml/: Main.qml
passkeyd-share/: Cargo.toml
